# tts_tool

./: .gitignore  CHANGELOG.md  HANDOFF.md  README.md  config.example.json  pyproject.toml  requirements.tmp.txt  requirements.txt  tts-reader-uia.spec
.github/workflows/: release.yml
doc/: comprehensive_optimization_plan.md  latency_analysis.md  packaging_retrospective_v0.3.x.md  size_optimization_plan.md  ui_optimization_plan.md
scripts/: build_exe.ps1  build_exe_uia.ps1  show_logs.ps1  smoke_test.ps1
src/: main.py
src/tts_reader/: __init__.py  app.py  cli.py  config.py  control_panel.py  hotkey.py  logging_setup.py  overlay.py  screen_ocr.py  selection.py  speaker.py  translator.py  tray.py
