[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-reader"
version = "0.2.0"
description = "Windows hotkey text-to-speech reader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pywin32>=306",
  "pyttsx3>=2.90",
  "pystray>=0.19.5",
  "Pillow>=10.0.0",
  "rapidocr-onnxruntime>=1.3.0",
]

[project.scripts]
tts-reader = "tts_reader.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
