[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-reader"
version = "0.5.1"
description = "Windows hotkey text-to-speech reader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pywin32>=306",
  "pyttsx3>=2.90",
  "pystray>=0.19.5",
  "Pillow>=10.0.0",
  "sv-ttk>=2.0.0",
  "winrt-Windows.Media.Ocr",
  "winrt-Windows.Graphics.Imaging",
  "winrt-Windows.Storage.Streams",
  "winrt-Windows.Foundation",
  "winrt-Windows.Foundation.Collections",
]

[project.scripts]
tts-reader = "tts_reader.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
